Alpha v0.4 - SEO and header improvements
# Version 0.4 Release Notes

## What's New

### Improved SEO and Social Media Sharing

- Added a custom favicon (`fbticon.svg`) for better brand recognition in browser tabs.
- Updated the page title to "Family Business Tycoon | Build Your Trading Empire Through History" for improved search engine visibility.
- Implemented meta description tag to provide a concise summary of the game for search results.
- Added relevant keywords meta tag to enhance SEO performance.
- Integrated Open Graph and Twitter Card meta tags for optimized social media sharing.

### Enhanced User Interface

- Centered the header on desktop views for a more balanced and visually appealing layout.
- Adjusted the header width to match the game board's two-column layout, creating a cohesive design.

### Technical Improvements

- Updated the `index.html` file with proper meta tags and structure.
- Implemented a canonical URL to prevent duplicate content issues.
- Added author information for better attribution.

## Bug Fixes

- No specific bug fixes in this version.

## Known Issues

- Social media sharing images (`og-image.jpg` and `twitter-image.jpg`) need to be created and optimized.

## Next Steps

- Create and optimize social media sharing images.
- Continue refining the game's user interface and functionality.
- Implement additional SEO best practices as the game develops.

We're excited to bring you these improvements to Family Business Tycoon. Your feedback is valuable to us as we continue to enhance the game experience. Thank you for your support!

--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/fbticon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React + TypeScript + Replit</title>
+    <title>Family Business Tycoon | Build Your Trading Empire Through History</title>
+    <meta name="description" content="Embark on a journey through time in Family Business Tycoon. Build and manage your trading empire across historical eras, make strategic decisions, and lead your family business to success." />
+    <meta name="keywords" content="family business tycoon, trading game, historical strategy, business simulation, economic strategy, time travel game" />
+    <meta name="author" content="Your Name or Company Name" />
+    <meta property="og:title" content="Family Business Tycoon | Build Your Trading Empire Through History" />
+    <meta property="og:description" content="Lead your family business through time, make strategic decisions, and build a trading empire in this immersive historical strategy game." />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://family-tycoon.replit.app/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Family Business Tycoon | Build Your Trading Empire Through History" />
+    <meta name="twitter:description" content="Lead your family business through time, make strategic decisions, and build a trading empire in this immersive historical strategy game." />
+    <meta name="twitter:image" content="/twitter-image.jpg" />
+    <link rel="canonical" href="https://family-tycoon.replit.app/" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-		
-    <!--
-    This script places a badge on your repl's full-browser view back to your repl's cover
-    page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-    teal, blue, blurple, magenta, pink!
-    -->
   </body>
 </html>
